add function to check status and fixing some table

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_PORT=5432
 DB_NAME=tpm_system
+DB_NAME_LOCAL=new_tpm_system
 PORT=3300
 SECRET_KEY=QccS3cr3TK3YY!!
 APP_HOST=http://localhost:3300/api/v1
