--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_PORT=5432
-DB_NAME=tpm_system
+DB_NAME=tpm_development
 DB_NAME_LOCAL=tpm_system
 PORT=3300
 SECRET_KEY=QccS3cr3TK3YY!!
