--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "nodemon ./bin/www"
+        "start": "nodemon ./bin/www",
+        "deploy-be": "git pull && npm install && pm2 stop 0 && pm2 start 0 && pm2 log 0"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
